tmp
In file included from multiTrain.cpp:4:0:
AsyncPDSparse.h: In member function ‘void AsyncPDSparse::solve()’:
AsyncPDSparse.h:115:32: error: ‘ins’ was not declared in this scope
     for(SparseVec::iterator it=ins->begin(); it!=ins->end(); it++)
                                ^
AsyncPDSparse.h:117:15: error: ‘i’ was not declared in this scope
     Q_diag[t][i] = sq_sum;
               ^
AsyncPDSparse.h:176:59: error: invalid operands of types ‘Float* {aka double*}’ and ‘double’ to binary ‘operator-’
       delta_alpha_i[ind++] = alpha_i_new[it->first] - it->second;
                                                           ^
AsyncPDSparse.h:185:53: error: ‘alpha’ was not declared in this scope
       for (vector<pair<int, Float>>::iterator it2 = alpha[i].begin(); it2 != alpha[i].end(); it2++){
                                                     ^
AsyncPDSparse.h:231:18: error: ‘T’ was not declared in this scope
    for(int t=0;t<T;t++){
                  ^
AsyncPDSparse.h: In member function ‘void AsyncPDSparse::subSolve(int, int, std::vector<std::pair<int, double> >&, Float*)’:
AsyncPDSparse.h:325:21: error: cannot convert ‘Float* {aka double*}’ to ‘Float {aka double}’ in initialization
   Float A = Q_diag[I];
                     ^
AsyncPDSparse.h: In member function ‘void AsyncPDSparse::search_active_i(int, int, std::vector<std::pair<int, double> >&)’:
AsyncPDSparse.h:380:52: error: cannot convert ‘std::vector<std::pair<int, double> >**’ to ‘SparseVec* {aka std::vector<std::pair<int, double> >*}’ in initialization
                 SparseVec* xi = &(data_blocks[t][i]);
                                                    ^
make: *** [multiTrain] Error 1
